src/objects/Canned_Responses__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spectrum</fullName>
                </value>
                <value>
                    <fullName>Chevron</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canned_Response_Title__c</fullName>
        <label>Canned Response Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>99999</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description_plain__c</fullName>
        <label>Description plain</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Lookup_Text__c</fullName>
        <label>Primary Lookup Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Lookup_Text__c</fullName>
        <label>Secondary Lookup Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Lookup_Text__c</fullName>
        <label>Tertiary Lookup Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Canned Responses</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Primary_Lookup_Text__c</columns>
        <columns>Secondary_Lookup_Text__c</columns>
        <columns>Tertiary_Lookup_Text__c</columns>
        <columns>Active__c</columns>
        <columns>Canned_Response_Title__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R{000000}</displayFormat>
        <label>Canned Responses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canned Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>